# sindri

./: .dockerignore  .env.example  .gitignore  .markdownlint.json  .markdownlintignore  .npmrc  .shellcheckrc  .yamllint.yml  AGENTS.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Dockerfile  LICENSE  Makefile  README.md  RELEASE_NOTES.3.1.md  RELEASE_NOTES.md  RELEASE_NOTES.v2.md  RELEASE_NOTES.v3.1.md  RELEASE_NOTES.v3.md  SECURITY.md  package.json  pnpm-workspace.yaml
v3/: CHANGELOG.md  Cargo.toml  Dockerfile  Dockerfile.base  Dockerfile.dev  README.md  audit-ignore  common.sh  compatibility-matrix.yaml  extension-source.yaml  profiles.yaml  registry.yaml  rust-toolchain.toml
v3/.cargo/: config.toml
v3/console/: .dockerignore  .env.example  .gitignore  .prettierignore  .prettierrc.json  README.md  docker-compose.yml  eslint.config.js  package.json  turbo.json
v3/console/agent/: .golangci.yml  Makefile  go.mod  go.sum
v3/console/docs/: API_SPEC.md  ARCHITECTURE.md  DATABASE_SCHEMA.md  README.md  SETUP.md
v3/crates/sindri/: Cargo.toml  README.md  build.rs
v3/crates/sindri-backup/: Cargo.toml  README.md
v3/crates/sindri-clusters/: Cargo.toml  README.md
v3/crates/sindri-core/: Cargo.toml  README.md
v3/crates/sindri-doctor/: Cargo.toml  README.md
v3/crates/sindri-extensions/: Cargo.toml  README.md
v3/crates/sindri-image/: Cargo.toml  README.md
v3/crates/sindri-packer/: Cargo.toml  README.md
v3/crates/sindri-projects/: Cargo.toml  README.md
v3/crates/sindri-providers/: Cargo.toml  README.md
v3/crates/sindri-secrets/: Cargo.toml  README.md
v3/crates/sindri-update/: Cargo.toml  README.md
v3/docker/config/: developer-sudoers  sshd_config
v3/docker/lib/: pkg-manager.sh
v3/docker/scripts/: check-extension-status.sh  entrypoint.sh  healthcheck.sh  install-mise.sh  install-nerd-fonts.sh  setup-motd.sh  setup-ssh-environment.sh  show-motd.sh
v3/docker/templates/: bashrc  starship.toml
v3/docs/: ARCHITECTURE.md  BACKUP_RESTORE.md  CLI.md  CLI_EXTENSION_COMPATIBILITY_GUIDE.md  CONFIGURATION.md  DEPLOYMENT.md  DOCTOR.md  EXTENSIONS.md  EXTENSION_AUTHORING.md  EXTENSION_CONDITIONAL_TEMPLATES_MIGRATION.md  EXTENSION_MIGRATION_STATUS.md  FAQ.md  GETTING_STARTED.md  IMAGE_MANAGEMENT.md  K8S.md  MAINTAINER_GUIDE.md  MULTI_ARCH_SUPPORT.md  PACKER_SECURITY.md  PROJECTS.md  QUICKSTART.md  RUNTIME_CONFIGURATION.md  SCHEMA.md  SECRETS_MANAGEMENT.md  SUPPORT_FILES_CLI_COMMAND.md  SUPPORT_FILE_INTEGRATION.md  SUPPORT_FILE_VERSION_HANDLING.md  TROUBLESHOOTING.md  VM_DISTRIBUTION.md  VM_IMAGE_DISTRIBUTION.md  VM_SECURITY.md  getting-started.md  image-management.md
v3/docs/extensions/: AGENT-BROWSER.md  AGENT-MANAGER.md  AGENTIC-FLOW.md  AGENTIC-QE.md  AI-TOOLKIT.md  CLAUDE-CLI.md  CLAUDE-CODE-MUX.md  CLAUDE-CODEPRO.md  CLAUDE-FLOW-V2.md  CLAUDE-FLOW-V3.md  CLAUDE-MARKETPLACE.md  CLAUDEUP.md  CLAUDISH.md  CLOUD-TOOLS.md  COMPAHOOK.md  CONTEXT7-MCP.md  DOCKER.md  DOTNET.md  EXCALIDRAW-MCP.md  GITHUB-CLI.md  GOLANG.md  GOOSE.md  GUACAMOLE.md  HASKELL.md  INFRA-TOOLS.md  JIRA-MCP.md  JVM.md  LINEAR-MCP.md  MDFLOW.md  MISE-CONFIG.md  MONITORING.md  NODEJS-DEVTOOLS.md  NODEJS.md  OLLAMA.md  OPENSKILLS.md  PAL-MCP-SERVER.md  PHP.md  PLAYWRIGHT.md  PYTHON.md  RALPH.md  (+11 more)
v3/docs/faq/: fly.toml  index.html  validate-faq.sh
v3/docs/ides/: INTELLIJ.md  VSCODE.md
v3/docs/implementation/: TODO-TRACKER.md  s3-encryption-implementation.md  v3-dockerfile-validation-checklist.md  v3-enhancements-implementation-summary.md
v3/docs/migration/: MIGRATION_GUIDE.md  README.md
v3/docs/planning/: github-api-rate-limit-mitigation.md  rust-cli-migration-v3.md
v3/docs/providers/: ALIBABA-PACKER.md  ARCHITECTURE.md  AWS-PACKER.md  AZURE-PACKER.md  DEVPOD.md  DOCKER.md  E2B.md  FLY.md  GCP-PACKER.md  KUBERNETES.md  NORTHFLANK.md  OCI-PACKER.md  PACKER.md  README.md  RUNPOD.md  VM.md
v3/embedded/config/: platform-rules.yaml  runtime-defaults.yaml
v3/examples/: README.md  devpod-aws.yaml  devpod-azure.yaml  devpod-digitalocean.yaml  devpod-docker.yaml  devpod-gcp.yaml  docker-basic.yaml  e2b-basic.yaml  fly-basic.yaml  northflank-autoscaling.yaml  northflank-basic.yaml  northflank-full.yaml  northflank-gpu.yaml  provider-comparison.yaml  runpod-a100-training.yaml  runpod-cpu-only.yaml  runpod-gpu-basic.yaml  runpod-spot.yaml
v3/examples-integration/docker/: gpu-dind.sindri.yaml  minimal.sindri.yaml
v3/examples-integration/k8s/: vault-ingress.sindri.yaml
v3/examples-integration/runpod/: gpu-anthropic-dev.sindri.yaml
v3/examples/devpod-aws/: README.md
v3/examples/docker-basic/: README.md
v3/examples/e2b-sandbox/: README.md
v3/examples/fly-deployment/: README.md
v3/examples/kubernetes-cluster/: README.md
v3/extensions/agent-browser/: extension.yaml  mise.toml
v3/extensions/agent-manager/: agent-manager.aliases  agents-config.yaml.template  extension.yaml  install.sh  upgrade.sh
v3/extensions/agent-skills-cli/: extension.yaml  mise.toml  skills-manifest.yaml
v3/extensions/agentic-flow/: extension.yaml  mise.toml
v3/extensions/agentic-qe/: extension.yaml  mise.toml  pnpmfile.cjs  setup-pnpm-hooks.sh
v3/extensions/ai-toolkit/: README.md  extension.yaml  install.sh  mise.toml
v3/schemas/: categories.schema.json  extension-source.schema.json  extension.schema.json  manifest.schema.json  platform-rules.schema.json  profiles.schema.json  project-capabilities.schema.json  project-templates.schema.json  registry.schema.json  runtime-config.schema.json  sindri.schema.json  status-ledger.schema.json
v3/tests/: integration.rs  pkg-manager-test.sh
v4/: Cargo.toml
v4/.cargo/: audit.toml
v4/docs/: AUTH.md  AUTHORING.md  CLI.md  MIGRATION_FROM_V3.md  POLICY.md  REGISTRY.md  SOURCES.md  TARGETS.md  policy.md  script-contract.md
v4/registry-core/: index.yaml
v4/renovate-plugin/: README.md  package.json  vitest.config.js
v4/schemas/: bom.json  component.json  lock.json  policy.json  registry-index.json  registry-source.json
v4/tools/: decompose_extensions.py  fetch_checksums.py  generate_scripts.py  migrate_hooks_to_adr030.py  validate_registry.py
(+2714 files in other folders)
