[workspace]
resolver = "2"
members = [
    "crates/sindri",
    "crates/sindri-core",
    "crates/sindri-registry",
    "crates/sindri-resolver",
    "crates/sindri-policy",
    "crates/sindri-backends",
    "crates/sindri-targets",
    "crates/sindri-discovery",
    "crates/sindri-extensions",
    "tools/schema-gen",
]

[workspace.dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
schemars = { version = "1.2", features = ["derive"] }
clap = { version = "4", features = ["derive"] }
thiserror = "2"
anyhow = "1"
tokio = { version = "1", features = ["full"] }
async-trait = "0.1"
tracing = "0.1"
sha2 = "0.11"
hex = "0.4"
dirs-next = "2"
reqwest = { version = "0.12", features = ["json", "rustls-tls"], default-features = false }
semver = "1"
# OCI client (successor to oci-distribution; ADR-003). Wired into sindri-registry
# scaffold in Wave 3A.1; live OCI fetch lands in Wave 3A.2.
oci-client = { version = "0.16", default-features = false, features = ["rustls-tls"] }
# cosign / sigstore verification (ADR-014). Trust-key loading lands in Wave 3A.1;
# signature-manifest verification lands in Wave 3A.2. We intentionally keep the
# feature surface small to minimise compile time.
sigstore = { version = "0.13", default-features = false, features = ["cosign", "sigstore-trust-root", "rustls-tls"] }
# ECDSA P-256 verifying key parsing for the `CosignVerifier` trust-key loader.
p256 = { version = "0.13", default-features = false, features = ["ecdsa", "pem", "pkcs8", "std"] }
ecdsa = { version = "0.16", default-features = false, features = ["pem", "pkcs8"] }
# base64 decoding for cosign signature annotation payloads (ADR-014).
base64 = "0.22"
tempfile = "3"
