[package]
name = "sindri-clusters"
description = "Local Kubernetes cluster lifecycle management for Sindri CLI (kind, k3d)"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[dependencies]
sindri-core = { workspace = true }
tokio = { workspace = true }
async-trait = "0.1"
anyhow = { workspace = true }
thiserror = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
serde_yaml_ng = { workspace = true }
tracing = { workspace = true }
which = { workspace = true }
reqwest = { workspace = true }
chrono = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
