[package]
name = "sindri-core"
description = "Core library for Sindri CLI - config parsing, schema validation, and types"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
serde_yaml_ng = { workspace = true }
jsonschema = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
semver = { workspace = true }
rust-embed = { workspace = true }
camino = { workspace = true }
regex = { workspace = true }
chrono = { workspace = true }
tracing = { workspace = true }
tera = { workspace = true }
dirs = { workspace = true }
rand = "0.10"
tokio = { workspace = true }
termimad = "0.34.1"

[dev-dependencies]
tempfile = "3.24"
serial_test = { workspace = true }
