[package]
name = "sindri-extensions"
description = "Extension management for Sindri CLI"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[dependencies]
sindri-core = { workspace = true }
tokio = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
serde_yaml = { workspace = true }
tracing = { workspace = true }
petgraph = { workspace = true }
duct = { workspace = true }
chrono = { workspace = true }
regex = { workspace = true }
reqwest = { workspace = true }
semver = { workspace = true }
url = { workspace = true }
octocrab = { workspace = true }
directories = { workspace = true }
camino = { workspace = true }
uuid = { workspace = true }
tar = { workspace = true }
flate2 = { workspace = true }
dirs = "6.0"
sha2 = "0.10"
shellexpand = "3.1"

[dev-dependencies]
tempfile = "3.24"
serial_test = { workspace = true }
tokio-test = "0.4"
mockall = "0.14"
proptest = "1.5"
test-case = "3.3"
predicates = "3.1"
regex = "1.11"

# Integration test definitions
[[test]]
name = "install_lifecycle_tests"
path = "tests/install_lifecycle_tests.rs"

[[test]]
name = "hooks_lifecycle_tests"
path = "tests/hooks_lifecycle_tests.rs"

[[test]]
name = "validate_lifecycle_tests"
path = "tests/validate_lifecycle_tests.rs"

[[test]]
name = "dependency_tests"
path = "tests/dependency_tests.rs"
