[package]
name = "sindri-extensions"
description = "Extension management for Sindri CLI"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[dependencies]
sindri-core = { workspace = true }
tokio = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
serde_yaml = { workspace = true }
tracing = { workspace = true }
petgraph = { workspace = true }
duct = { workspace = true }
chrono = { workspace = true }
regex = { workspace = true }
reqwest = { workspace = true }
semver = { workspace = true }
url = { workspace = true }
directories = { workspace = true }
camino = { workspace = true }
uuid = { workspace = true }
tar = { workspace = true }
flate2 = { workspace = true }
console = { workspace = true }
sha2 = "0.10"
shellexpand = "3.1"
fs4 = { workspace = true }
tempfile = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
serial_test = { workspace = true }
tokio-test = "0.4"
mockall = "0.14"
proptest = "1.10"
test-case = "3.3"
predicates = "3.1"
regex = "1.11"
serde_json = { workspace = true }

# Integration test definitions
[[test]]
name = "install_lifecycle_tests"
path = "tests/install_lifecycle_tests.rs"

[[test]]
name = "hooks_lifecycle_tests"
path = "tests/hooks_lifecycle_tests.rs"

[[test]]
name = "validate_lifecycle_tests"
path = "tests/validate_lifecycle_tests.rs"

[[test]]
name = "dependency_tests"
path = "tests/dependency_tests.rs"

[[test]]
name = "bom_generation_tests"
path = "tests/bom_generation_tests.rs"

[[test]]
name = "ledger_tests"
path = "tests/ledger_tests.rs"
