[package]
name = "sindri-projects"
description = "Project management library for Sindri CLI - git operations, templates, and scaffolding"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[dependencies]
# Core dependencies
serde = { workspace = true }
serde_json = { workspace = true }
serde_yaml_ng = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }

# Filesystem and paths
camino = { workspace = true, features = ["serde1"] }
directories = { workspace = true }

# Template rendering
tera = { workspace = true }
rust-embed = { workspace = true }

# Date/time
chrono = { workspace = true }

# Regex
regex = { workspace = true }

# Glob patterns
glob = { workspace = true }

# Workspace crates
sindri-core = { workspace = true }

[dev-dependencies]
tempfile = "3.25"
tokio-test = "0.4"
