[package]
name = "sindri-providers"
description = "Provider adapters for Sindri CLI (Docker, Fly.io, DevPod, E2B, Kubernetes)"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[dependencies]
sindri-core = { workspace = true }
sindri-secrets = { workspace = true }
tokio = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
async-trait = "0.1"
serde = { workspace = true }
serde_json = { workspace = true }
serde_yaml_ng = { workspace = true }
tera = { workspace = true }
tracing = { workspace = true }
duct = { workspace = true }
which = "8.0"
chrono = { workspace = true }
dirs = { workspace = true }
base64 = "0.22"

[dev-dependencies]
tempfile = { workspace = true }
mockall = "0.13"
tokio = { workspace = true, features = ["test-util", "macros"] }
serde_yaml_ng = { workspace = true }
serde_json = { workspace = true }
camino = { workspace = true }
sindri-core = { workspace = true }
serial_test = { workspace = true }
