[package]
name = "sindri"
description = "Declarative, provider-agnostic cloud development environment CLI"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[[bin]]
name = "sindri"
path = "src/main.rs"

[dependencies]
sindri-core = { workspace = true }
sindri-providers = { workspace = true }
sindri-extensions = { workspace = true }
sindri-secrets = { workspace = true }
sindri-update = { workspace = true }
sindri-projects = { workspace = true }
sindri-doctor = { workspace = true }
sindri-clusters = { workspace = true }
sindri-image = { workspace = true }
sindri-packer = { workspace = true }
sindri-backup = { workspace = true }

# CLI
clap = { workspace = true }
clap_complete = "4.5.65"
tokio = { workspace = true }
anyhow = { workspace = true }
futures = { workspace = true }

# Terminal UI
indicatif = { workspace = true }
dialoguer = { workspace = true }
owo-colors = { workspace = true }
tabled = { workspace = true }
console = { workspace = true }

# Logging
tracing = { workspace = true }
tracing-subscriber = { workspace = true }

# Filesystem
camino = { workspace = true }
directories = { workspace = true }

# Version management
semver = { workspace = true }

# Serialization
serde = { workspace = true }
serde_json = { workspace = true }
serde_yaml = { workspace = true }

# Additional dependencies for new commands
base64 = "0.22"
chrono = { workspace = true }
globset = { workspace = true }
glob = "0.3"
walkdir = "2.5"
rand = "0.9"
vaultrs = "0.7"
regex = { workspace = true }

# Tool detection
which = { workspace = true }

# Archive extraction for upgrades
flate2 = "1.1"
tar = "0.4"
reqwest = { workspace = true }

# TLS crypto provider (required for rustls 0.23+)
rustls = { version = "0.23", features = ["aws-lc-rs"], default-features = false }

[build-dependencies]
chrono = "0.4"
tokio = { workspace = true }
anyhow = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
sindri-image = { workspace = true }
semver = { workspace = true }

[dev-dependencies]
tempfile = "3.8"

[[test]]
name = "bom_cli_tests"
path = "tests/bom_cli_tests.rs"

[[test]]
name = "cli_extension_log_tests"
path = "tests/cli_extension_log_tests.rs"
