[package]
name = "sindri-backends"
version = "0.1.0"
edition = "2021"

[lib]
name = "sindri_backends"
path = "src/lib.rs"

[dependencies]
sindri-core = { path = "../sindri-core" }
sindri-targets = { path = "../sindri-targets" }
anyhow = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
sha2 = { workspace = true }
hex = { workspace = true }
reqwest = { workspace = true }
serde_json = { workspace = true }
dirs-next = { workspace = true }
