[package]
name = "sindri-core"
version = "0.1.0"
edition = "2021"

[lib]
name = "sindri_core"
path = "src/lib.rs"

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
schemars = { workspace = true }
thiserror = { workspace = true }

[dev-dependencies]
serde_yaml = { workspace = true }
