[package]
name = "sindri-core"
version = "0.1.0"
edition = "2021"

[lib]
name = "sindri_core"
path = "src/lib.rs"

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
serde_yaml = { workspace = true }
schemars = { workspace = true }
thiserror = { workspace = true }
dirs-next = { workspace = true }
sha2 = { workspace = true }
hex = { workspace = true }
tracing = { workspace = true }
# Cross-platform advisory file lock for concurrent-apply protection (Wave 5H, D19).
fs4 = "1.1"

[dev-dependencies]
tempfile = { workspace = true }
