[package]
name = "sindri-discovery"
version = "0.1.0"
edition = "2021"

[lib]
name = "sindri_discovery"
path = "src/lib.rs"

[dependencies]
sindri-core = { path = "../sindri-core" }
sindri-registry = { path = "../sindri-registry" }
anyhow = { workspace = true }
serde_json = { workspace = true }
serde_yaml = { workspace = true }
dirs-next = { workspace = true }
