[package]
name = "sindri-extensions"
version = "0.1.0"
edition = "2021"

[lib]
name = "sindri_extensions"
path = "src/lib.rs"

[dependencies]
sindri-core = { path = "../sindri-core" }
sindri-targets = { path = "../sindri-targets" }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
tokio = { workspace = true }
anyhow = { workspace = true }
semver = { workspace = true }
dirs-next = { workspace = true }

[dev-dependencies]
tempfile = "3"
proptest = "1"
regex = "1"
