[package]
name = "sindri-policy"
version = "0.1.0"
edition = "2021"

[lib]
name = "sindri_policy"
path = "src/lib.rs"

[dependencies]
sindri-core = { path = "../sindri-core" }
serde = { workspace = true }
serde_json = { workspace = true }
serde_yaml = { workspace = true }
thiserror = { workspace = true }
dirs-next = { workspace = true }
tracing = { workspace = true }
