[package]
name = "sindri-registry"
version = "4.0.0-alpha.1"
edition = "2021"

[lib]
name = "sindri_registry"
path = "src/lib.rs"

[dependencies]
sindri-core = { path = "../sindri-core" }
serde = { workspace = true }
serde_json = { workspace = true }
serde_yaml = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
sha2 = { workspace = true }
hex = { workspace = true }
dirs-next = { workspace = true }
reqwest = { workspace = true }
# OCI + cosign foundation (Wave 3A.1 — scaffold; Wave 3A.2 wires real fetch/verify).
# See ADR-003 (OCI-only registry distribution) and ADR-014 (signed registries).
oci-client = { workspace = true }
sigstore = { workspace = true }
p256 = { workspace = true }
ecdsa = { workspace = true }
base64 = { workspace = true }
# Wave 5A — D6: tar/gzip OCI layer extraction (path-traversal-safe).
flate2 = { workspace = true }
tar = { workspace = true }

[features]
default = []
# Enables tests that hit live public OCI registries (e.g. ghcr.io). Skipped by
# default in CI; run locally with:
#     cargo test -p sindri-registry --features live-oci-tests -- --ignored
live-oci-tests = []

[dev-dependencies]
tempfile = { workspace = true }
tokio = { workspace = true }
rand_core = { version = "0.6", features = ["std"] }
serde_json = { workspace = true }
# Wave 5A — D7: in-process HTTP mock server for OCI Distribution Spec tests.
# These tests do not require network access and run on every `cargo test`
# invocation, unlike the `live-oci-tests`-gated `tests/oci_integration.rs`.
wiremock = "0.6"
